--- a/curso-es6/package.json
+++ b/curso-es6/package.json
@@ -20,6 +20,7 @@
     "build": "webpack --mode=production"
   },
   "dependencies": {
+    "@babel/preset-stage-3": "^7.8.3",
     "axios": "^0.19.2"
   }
 }
